nav-color-fixed

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,26 @@ body{
 	background-color: #0a192f !important;
 }
 
+nav ul li a{
+	color: #abb7d4;
+	text-decoration: none;
+	font-size: 15px;
+	font-family: "SF Mono","Fira Code","Fira Mono","Roboto Mono",monospace;
+}
+
+nav ul li{
+	list-style-type: none;
+	display: inline-block;
+	padding: 10px  17px;
+}
+
+nav ul li a:hover{
+	color: #64ffda;
+	transition: .4s;
+}
+
+
+
 .start{
 	height: 100vh;
 	width: 100%;
@@ -20,10 +40,7 @@ body{
 	font-family: "SF Mono","Fira Code","Fira Mono","Roboto Mono",monospace;
 }
 
-.start a{
-	color: #abb7d4;
-	font-family: "SF Mono","Fira Code","Fira Mono","Roboto Mono",monospace;
-}
+
 
 .content h4{
 	color: #64ffda;
@@ -95,21 +112,8 @@ nav{
 span{
 	color: #f9004d;
 }
-nav ul li{
-	list-style-type: none;
-	display: inline-block;
-	padding: 10px  25px;
-}
-nav ul li a{
-	color: white;
-	text-decoration: none;
-	font-weight: bold;
-	text-transform: capitalize;
-}
-nav ul li a:hover{
-	color: #64ffda;
-	transition: .4s;
-}
+
+
 .btn{
 	background-color:#f9004d;
 	color: white;
