--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,27 @@ body{
 	background-color: #0a192f !important;
 }
 
+.start{
+	height: 100vh;
+	width: 100%;
+}
+
+
+/* Laptop er size onujayi eitar margin-top ar margin-left ta fix korte hobe */
+.content{
+	margin-top: 50px;
+	margin-left: 290px;
+}
+
+nav{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding-top: 45px;
+	padding-left: 8%;
+	padding-right: 8%;
+}
+
 nav ul li a{
 	color: #abb7d4;
 	text-decoration: none;
@@ -28,53 +49,61 @@ nav ul li a:hover{
 	transition: .4s;
 }
 
-
-
-.start{
-	height: 100vh;
-	width: 100%;
-}
-
 .num{
 	color: #64ffda;
 	font-family: "SF Mono","Fira Code","Fira Mono","Roboto Mono",monospace;
 }
 
-
+.start .content h3{
+	color: #8892b0;
+	line-height: 0.5;
+	font-size: clamp(30px, 5vw, 65px);
+	font-weight: 650;
+	font-family: "Calibre","Inter","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif !important;
+}
 
 .content h4{
 	color: #64ffda;
+	margin: 0px 0px 55px 10px; /* (top, right , bottom, left)*/
+	font-size: 17px;
+	font-weight: 400;
+	line-height: 1.1;
+	/* font-size: clamp(var(--fz-sm),5vw,var(--fz-md)); */
+	letter-spacing: 0px;
+	font-family: "SF Mono","Fira Code","Fira Mono","Roboto Mono",monospace;
 }
 
 .name{
 	color: #ccd6f6 !important;
 }
 
-.content h1{
-	color: #8892b0;
-	line-height: 1;
-	font-size: clamp(40px, 8vw, 80px);
-	font-weight: 600;
-}
-
-.content p{
+.content .paragraph p{
 	font-size: 18px;
-	color: #8892b0;
+	font-weight: 460;
 }
 
 .paragraph{
-	margin-top: 40px;
-	margin-bottom: 40px;
+	color: #8892b0;
+	margin-top: 65px;
+	margin-bottom: 65px;
+	font-family: "Calibre","Inter","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif !important;
+	line-height: 1.5;
+}
+
+.spacial-color{
+	color: #64ffda;
 }
 
 .content button{
+	font-family: "SF Mono","Fira Code","Fira Mono","Roboto Mono",monospace;
 	margin-top: 20px;
 	background-color:#0a192f;
 	color: #64ffda !important;
-	border: 2px solid transparent;
-	padding: 20px 30px;
+	text-decoration: none;
+	padding: 20px 45px;
 	border-radius: 5px;
-	border: 2px solid #64ffda;
+	font-size: 15px;
+	border: 1.5px solid #64ffda;
 }
 
 
@@ -95,14 +124,11 @@ nav ul li a:hover{
 
 
 
-nav{
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	padding-top: 45px;
-	padding-left: 8%;
-	padding-right: 8%;
-}
+
+
+
+
+
 .logo{
 	color: white;
 	font-size: 35px;
@@ -143,11 +169,13 @@ h3{
 	font-size: 25px;
 	margin-bottom: 50px;
 }
+
 h4{
 	color: #fcfc;
 	letter-spacing: 2px;
 	font-size: 20px;
 }
+
 
 .about{
 	width: 100%;
@@ -189,16 +217,8 @@ h4{
 	font-size: 18px;
 	margin-bottom: 45px;
 }
-button{
-	background-color:#f9004d;
-	color: #64ffda;
-	text-decoration: none;
-	border: 2px solid transparent;
-	font-weight: bold;
-	padding: 13px 30px;
-	border-radius: 30px;
-	transition: .4s; 
-}
+
+
 
 
 .service{
