updated for mac

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body{
 /* Laptop er size onujayi eitar margin-top ar margin-left ta fix korte hobe */
 .content{
 	margin-top: 50px;
-	margin-left: 290px;
+	margin-left: 250px;
 }
 
 nav{
@@ -57,8 +57,8 @@ nav ul li a:hover{
 .start .content h3{
 	color: #8892b0;
 	line-height: 0.5;
-	font-size: clamp(30px, 5vw, 65px);
-	font-weight: 650;
+	font-size: clamp(30px, 5vw, 60px); /* for pc : clamp(30px, 5vw, 65px);  */
+	font-weight: 600; /* for pc : font-weight : 650 */
 	font-family: "Calibre","Inter","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif !important;
 }
 
