--- a/css/style.css
+++ b/css/style.css
@@ -106,11 +106,29 @@ nav ul li a:hover{
 	border: 1.5px solid #64ffda;
 }
 
+.about-text{
+	width: 550px;
+	margin-left: 30px;
+}
 
-/* button:hover{
-	background-color: transparent;
-	cursor: pointer;
-} */
+.about{
+	width: 100%;
+	padding: 100px 0px;
+	background-color: #0a192f;
+}
+.about img{
+	height: auto;
+	width: 430px;
+}
+
+.main{
+	width: 1130px;
+	max-width: 95%;
+	margin: 0 auto;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+}
 
 
 
@@ -129,15 +147,36 @@ nav ul li a:hover{
 
 
 
-.logo{
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .logo{
 	color: white;
 	font-size: 35px;
 	letter-spacing: 1px;
 	cursor: pointer;
-}
+} */
 span{
 	color: #f9004d;
 }
+
+
+
+
+
+
+
 
 
 .btn{
@@ -177,26 +216,7 @@ h4{
 }
 
 
-.about{
-	width: 100%;
-	padding: 100px 0px;
-	background-color: #191919;
-}
-.about img{
-	height: auto;
-	width: 430px;
-}
-.about-text{
-	width: 550px;
-}
-.main{
-	width: 1130px;
-	max-width: 95%;
-	margin: 0 auto;
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
-}
+
 .about-text h2{
 	color: white;
 	font-size: 75px;
