education and skill done

--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,17 @@ nav ul li a:hover{
 	font-weight: 460;
 }
 
+
+/* Eikhan theke skills er style start */
+
+.skill{
+	margin-top: 120px;
+	
+}
+
+
+
+
 /* "▹" */
 
 
