--- a/css/style.css
+++ b/css/style.css
@@ -160,23 +160,23 @@ nav ul li a:hover{
 	font-weight: 460;
 }
 
+/* Eikhan theke education section er style start */
 
-/* Eikhan theke skills er style start */
+#Education_section a{
+	color: #8892b0;
+	text-decoration: none;
+}
+
+#Education_section a:hover{
+	color: #64ffda;
+}
+
+/* Eikhan theke skills section er style start */
 
 .skill{
 	margin-top: 120px;
 	
 }
-
-
-
-
-/* "▹" */
-
-
-
-
-
 
 
 
