--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body{
 /* Laptop er size onujayi eitar margin-top ar margin-left ta fix korte hobe */
 .content{
 	margin-top: 50px;
-	margin-left: 290px; /*for pc : margin-left: 290; for laptop : 250*/
+	margin-left: 10%
 }
 
 nav{
@@ -134,10 +134,13 @@ nav ul li a:hover{
 	width: 430px;
 	border-radius: 10px;
 	filter: grayscale(100%);
+	/* filter: opacity(40%); */
 }
 
 .about img:hover{
 	filter: grayscale(0%);
+	/* filter: opacity(100%); */
+	transition: 1s;
 }
 
 .about-text h4{
@@ -175,42 +178,10 @@ nav ul li a:hover{
 
 .skill{
 	margin-top: 120px;
-	
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* .logo{
-	color: white;
-	font-size: 35px;
-	letter-spacing: 1px;
-	cursor: pointer;
-} */
-
-
-
-
-
-
-
-
-
-
+/* 
 .btn{
 	background-color:#f9004d;
 	color: white;
@@ -223,124 +194,35 @@ nav ul li a:hover{
 }
 .btn:hover{
 	transform: scale(1.2);
-}
+} */
+
 .content{
 	position: absolute;
 	top: 50%;
 	left:8%;
 	transform: translateY(-50%);
 }
+
 h1{
 	color: white;
 	margin: 20px 0px 20px;
 	font-size: 75px;
 }
+
 h3{
-	color: white;
+	color: #abb7d4;
 	font-size: 25px;
 	margin-bottom: 50px;
 }
 
-/* h4{
-	color: #fcfc;
-	letter-spacing: 2px;
-	font-size: 20px;
-} */
 
 
-
-.about-text h2{
-	color: white;
-	font-size: 75px;
-	text-transform: capitalize;
-	margin-bottom: 20px;
-}
-.about-text h5{
-	color: white;
-	letter-spacing: 2px;
-	font-size: 22px;
-	margin-bottom: 25px;
-	text-transform: capitalize;
-}
-/* .about-text p{
-	color: #fcfc;
-	letter-spacing: 1px;
-	line-height: 28px;
-	font-size: 18px;
-	margin-bottom: 45px;
-} */
-
-
-
-
-.service{
-	background: #101010;
-	width: 100%;
-	padding: 100px 0px;
-}
-.title h2{
-	color: white;
-	font-size: 75px;
-	width: 1130px;
-	margin: 30px auto;
-	text-align: center;
-}
-.box{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	min-height: 400px;
-}
-.card{
-	height: 365px;
-	width: 335px;
-	padding: 20px 35px;
-	background: #191919;
-	border-radius: 20px;
-	margin: 15px;
-	position: relative;
-	overflow: hidden;
-	text-align: center;
-}
-.card i{
-	font-size: 50px;
-	display: block;
-	text-align: center;
-	margin: 25px 0px;
-	color: #f9004d;
-
-}
-h5{
-	color: white;
-	font-size: 23px;
-	margin-bottom: 15px;
-}
-.pra p{
-	color: #fcfc;
-	font-size: 16px;
-	line-height: 27px;
-	margin-bottom: 25px;
-}
-.card .button{
-	background-color:#f9004d;
-	color: #64ffda;
-	text-decoration: none;
-	border: 2px solid transparent;
-	font-weight: bold;
-	padding: 9px 22px;
-	border-radius: 30px;
-	transition: .4s; 
-}
-.card .button:hover{
-	background-color: transparent;
-	border: 2px solid #f9004d;
-	cursor: pointer;
-}
+/* Footer er style start hoise */
 
 footer{
 	position: relative;
 	width: 100%;
-	height: 400px;
+	height: 300px;
 	/* background: #101010; */
 	display: flex;
 	flex-direction: column;
@@ -363,26 +245,23 @@ footer p:nth-child(2){
 .social{
 	display: flex;
 }
+
 .social a{
 	width: 45px;
 	height: 45px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background:  #f9004d;
+	background:  #0a192f;
 	border-radius: 50%;
 	margin: 22px 10px;
-	color: white;
+	color: #ccd6f6;
 	text-decoration: none;
 	font-size: 20px;
 }
 .social a:hover{
+	color: #64ffda;
 	transform: scale(1.3);
 	transition: .3s;
 }
-.end{
-	position: absolute;
-	color:#f9004d;
-	bottom: 35px;
-	font-size: 14px; 
-}
+
