--- a/css/style2.css
+++ b/css/style2.css
@@ -5,18 +5,26 @@
 }
 
 body{
-	background: #cfebff;
+	background-color: #0a192f;
 	font-family: sans-serif;
 }
 
-.pf{
+body h2{
+	margin-top: 5%;
+	margin-bottom: 3%;
+	color: aquamarine;
+	text-align: center;
+}
+
+.info{
 	display: inline-block;
 	width: 80%;
 	padding:  30px 10px;
-	margin: 2%;
+	margin-left: 10%;
 	text-align: left;
 	box-shadow: 0 0 15px 1px rgba(37, 73, 214, 0.18);
-	background: #fff;
+	background: #8892b0;
+	border-radius: 15px;
 }
 
 table,th,td{
@@ -27,4 +35,14 @@ table,th,td{
 	text-align: center;
 	border:2px solid #000;
 	border-collapse: collapse;
+}
+
+.hobbies ul{
+	color: #8892b0;
+	margin-left: 20%;
+	font-size: 20px;
+}
+
+.hobbies ul li{
+	line-height: 45px;
 }
