--- a/css/style2.css
+++ b/css/style2.css
@@ -46,3 +46,9 @@ table,th,td{
 .hobbies ul li{
 	line-height: 45px;
 }
+
+.fav-quote p{
+	color: #8892b0;
+	text-align: center;
+	margin-bottom: 5%;
+}
