--- a/css/style2.css
+++ b/css/style2.css
@@ -47,6 +47,15 @@ table,th,td{
 	line-height: 45px;
 }
 
+.hobbies img{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 20%;
+	border-radius: 15px;
+	margin-bottom: 3%;
+}
+
 .fav-quote p{
 	color: #8892b0;
 	text-align: center;
